# nowplaying

./: .gitignore  NowPlaying.sln  README.md
.github/workflows/: build.yml
NowPlaying/: Dockerfile  NowPlaying.csproj  NowPlaying.sln  Program.cs  README.md  appsettings.json  manage.py  pyproject.toml
NowPlaying/Controllers/: MobileAuthController.cs  StationController.cs
NowPlaying/Database/: NowPlayingContext.cs
NowPlaying/Migrations/: 20241123165409_Initial.Designer.cs  20241123165409_Initial.cs  NowPlayingContextModelSnapshot.cs
NowPlaying/Properties/: launchSettings.json
NowPlaying/nowplaying/: asgi.py  authentication.py  settings.py  urls.py  wsgi.py
NowPlayingClient/: App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  NowPlayingClient.csproj  NowPlayingClient.sln  Program.cs  ViewLocator.cs
NowPlayingClient/Constants/: ApiConstants.cs
NowPlayingClient/Controls/: Auth0Settings.axaml  Auth0Settings.axaml.cs
now-playing-client/: main.py  pyproject.toml
now-playing-client/constants/: headers.py  settings.py
now-playing-client/models/: authentication.py  settings.py
now-playing-client/models/dto/: authentication.py  nowplaying.py
now-playing-client/services/: __init__.py  api.py  authentication.py  file.py  settings.py
now-playing-client/ui/: __init__.py  app.py  nowplaying.kv
now-playing-client/ui/views/: __init__.py  auth.py  file.py  home.py  http.py  nowplaying.py  station.py
now-playing-frontend/: Dockerfile  package-lock.json  package.json
(+66 files in other folders)
