[tool.poetry]
name = "now-playing-client"
version = "0.1.0"
description = ""
authors = ["Marc Steele <steelegbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
kivy = "^2.3.0"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
