[tool.poetry]
name = "now-playing-client"
version = "0.1.0"
description = ""
authors = ["Marc Steele <steelegbr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
kivy = "^2.3.0"
pydantic = "^2.9.2"
auth0-python = "^4.7.2"
watchdog = "^6.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
